--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title> About me </title>
-		<link rel="stylesheet" href="hm2.css" />
+		<link rel="stylesheet" href="hw2.css" />
 	
 		
 	</head>
